Some text fixes on unrecognized characters for quotes

--- a/www/index.html
+++ b/www/index.html
@@ -328,19 +328,19 @@
     <!-- main -->
     <div role="main" class="ui-content">
       <h3>How It Works</h3>
-      <p>We take every precaution to protect any personally identifiable data. All information shown on the public map visualization for Smell PGH is anonymous and location data is skewed to protect your privacy. Personal contact information you enter in the settings tab, is only shared with ACHD and not stored in our database. Our backend database only contains anonymous User ID’s created by your app service (Apple or Google Play).</p>
+      <p>We take every precaution to protect any personally identifiable data. All information shown on the public map visualization for Smell PGH is anonymous and location data is skewed to protect your privacy. Personal contact information you enter in the settings tab, is only shared with ACHD and not stored in our database. Our backend database only contains anonymous User ID's created by your app service (Apple or Google Play).</p>
 
       <p>The basic function of the Smell PGH app is as follows:</p>
       <ul>
         <li>When you experience a pollution odor outdoors, you launch the app and pick a rating for the smell you experience (from 1 through 5)</li>
-        <li>Adding a description of the smell (e.g. "Industrial", "Woodsmoke”, etc.) is highly encouraged, since this can help the county isolate the source</li>
+        <li>Adding a description of the smell (e.g. "Industrial", "Woodsmoke", etc.) is highly encouraged, since this can help the county isolate the source</li>
         <li>You also have the option to (but are not required to):</li>
         <ul>
           <li>List any symptoms attributable to the experience</li>
           <li>Send a personal note/question to ACHD</li>
         </ul>
         <li>NOTE: Please only enter information that you are comfortable with sharing anonymously on the public Smell PGH map</li>
-        <li>Once you hit 'Submit’, the information you report is pulled together in an email format that includes:</li>
+        <li>Once you hit 'Submit', the information you report is pulled together in an email format that includes:</li>
         <ul>
           <li>The location of the smell (based on the GPS location of your phone)</li>
           <li>Date and Time of smell</li>
