Final text tweaks.

--- a/www/index.html
+++ b/www/index.html
@@ -121,10 +121,6 @@
       <div class="submission-disclaimer">
         NOTE: Please only enter information that you are comfortable with sharing anonymously on the public Smell PGH map.
       </div>
-      <br/>
-      <div class="submission-disclaimer">
-        If you'd like to receive correspondence about your reports, enter your contact info in the settings tab.
-      </div>
       <button type="button" id="button_submit_report" disabled>Send Smell Report</button>
     </div>
     <!-- footer -->
@@ -247,7 +243,7 @@
       <h3>Welcome to Smell PGH!</h3>
       <p>Thank you for installing the Smell PGH App!</p>
       <p>This app is designed to track pollution odors across the Pittsburgh region. If you detect a foul odor while you're outside, please report it through this app.</p>
-      <p style="font-weight:bold;">All reports in Smell PGH are made available to the local health department of the area from which the report is submitted.</p>
+      <p style="font-weight:bold;">All Smell PGH reports from Pittsburgh are made available to the local health department.</p>
     </div>
     <!-- footer -->
     <div data-role="footer" data-position="fixed" data-id="startup_1" data-tap-toggle="false">
@@ -280,7 +276,7 @@
       <h3>About Smell PGH</h3>
       <p><a href="http://smellpgh.org/" target="_blank">Official Website</a></p>
       <p>Pittsburgh was named one of the top 15 most livable cities in the US, but our air quality is often worse than other cities on that list. Foul odors outside are typically symptoms of a serious pollution problem in our region. We, our children, our friends and families all breathe in this air. If our air smells toxic, then we are likely inhaling toxins.</p>
-      <p>Smell PGH was designed to crowdsource smell reports so we can track how pollutants travel through our air across Pittsburgh. All odor complaints submitted through the app are made available to local health departments so they can better monitor and act on these complaints.</p>
+      <p>Smell PGH was designed to crowdsource smell reports so we can track how pollutants travel through our air across Pittsburgh. All odor complaints submitted through the app are publicly available through our website, and made available to the local health department so it can better monitor and act on these complaints.</p>
       <center class="smell-submit-share">-- Smell -- Submit -- Share --</center>
       <p>Smell PGH was developed by the CMU CREATE Lab with support from the Heinz Endowments, and in collaboration with:</p>
       <ul>
@@ -328,7 +324,7 @@
     <!-- main -->
     <div role="main" class="ui-content">
       <h3>How It Works</h3>
-      <p>We take every precaution to protect any personally identifiable data. All information shown on the public map visualization for Smell PGH is anonymous and location data is skewed to protect your privacy. Personal contact information you enter in the settings tab, is made only available to local health departments and not stored in our database. Our backend database only contains anonymous User ID's created by your app service (Apple or Google Play).</p>
+      <p>We take every precaution to protect any personally identifiable data. All information shown on the public map visualization for Smell PGH is anonymous and location data is skewed to protect your privacy. Personal contact information you enter in the settings tab is only made available to the local health department. Our backend database only contains anonymous User ID's created by your app service (Apple or Google Play).</p>
 
       <p>The basic function of the Smell PGH app is as follows:</p>
       <ul>
@@ -337,7 +333,7 @@
         <li>You also have the option to (but are not required to):</li>
         <ul>
           <li>List any symptoms attributable to the experience</li>
-          <li>Send a personal note/question</li>
+          <li>Send a personal note/question to the local health department</li>
         </ul>
         <li>NOTE: Please only enter information that you are comfortable with sharing anonymously on the public Smell PGH map</li>
         <li>Once you hit 'Submit', the information you report is pulled together in an email format that includes:</li>
@@ -347,7 +343,7 @@
           <li>Rating and description (if provided) of smell</li>
           <li>Any personal notes and/or questions (if provided)</li>
         </ul>
-        <li>This information is then made available to local health departments</li>
+        <li>This information is then made available to the local health department</li>
         <li>At the same time your smell report is added to the public Smell PGH map</li>
         <ul>
           <li>A triangle icon that's the color of your smell rating represents your report</li>
