--- a/www/index.html
+++ b/www/index.html
@@ -99,7 +99,7 @@
         <input type="text" name="textfield_feelings_symptoms" id="textfield_feelings_symptoms" value="" placeholder="" data-clear-btn="true" />
       </div>
       <div class="homepage-section">
-        <label for="textfield_additional_comments">Add a personal note to the Health Department</label>
+        <label for="textfield_additional_comments">Add a personal note to the health department</label>
         <textarea type="text" name="textfield_additional_comments" id="textfield_additional_comments" value="" data-clear-btn="true"></textarea>
       </div>
       <div id="current_time_location">
@@ -242,7 +242,7 @@
     <div role="main" class="ui-content">
       <h3>Welcome to Smell PGH!</h3>
       <p>Thank you for installing the Smell PGH App!</p>
-      <p>This app is designed to track pollution odors across the Pittsburgh region. If you detect a foul odor while you're outside, please report it through this app.</p>
+      <p>This app is created by the CMU CREATE Lab and is designed to track pollution odors across the Pittsburgh region. If you detect a foul odor while you're outside, please report it through this app.</p>
       <p style="font-weight:bold;">All Smell PGH reports from Pittsburgh are made available to the local health department.</p>
     </div>
     <!-- footer -->
