Adjusted style of settings panel and added x button

--- a/www/index.html
+++ b/www/index.html
@@ -66,12 +66,12 @@
     </div>
     <!-- panel -->
     <div data-role="panel" id="home-panel" data-display="overlay">
-      <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Close</a>
-      <ul data-role="listview" data-inset="true" data-icon="false">
+      <ul data-role="listview" data-inset="false" data-icon="false">
         <li><a href="#settings" data-transition="none">Settings</a></li>
         <li><a href="#about" data-transition="none">About</a></li>
         <li><a href="#howitworks" data-transition="none">How It Works</a></li>
-      </ul>
+      </ul><br/>
+	  <a class="close-button" href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Close</a>
     </div>
     <!-- header -->
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
@@ -155,12 +155,12 @@
     </div>
     <!-- panel -->
     <div data-role="panel" id="map-panel" data-display="overlay">
-      <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Close</a>
-      <ul data-role="listview" data-inset="true" data-icon="false">
+      <ul data-role="listview" data-inset="false" data-icon="false">
         <li><a href="#settings" data-transition="none">Settings</a></li>
         <li><a href="#about" data-transition="none">About</a></li>
         <li><a href="#howitworks" data-transition="none">How It Works</a></li>
-      </ul>
+      </ul><br/>
+      <a class="close-button" href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Close</a>
     </div>
     <!-- header -->
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
@@ -188,17 +188,18 @@
   <div data-role="page" id="settings">
     <!-- panel -->
     <div data-role="panel" id="settings-panel" data-display="overlay">
-      <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Close</a>
-      <ul data-role="listview" data-inset="true" data-icon="false">
+      <ul data-role="listview" data-inset="false" data-icon="false">
         <li><a href="#settings" class="ui-btn ui-btn-active" data-transition="none">Settings</a></li>
         <li><a href="#about" data-transition="none">About</a></li>
         <li><a href="#howitworks" data-transition="none">How It Works</a></li>
-      </ul>
+      </ul><br/>
+       <a class="close-button"href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Close</a>
     </div>
     <!-- header -->
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
       <a href="#settings-panel" class="ui-btn ui-corner-all ui-shadow ui-icon-bars ui-btn-icon-left">Settings</a>
       <h1>Settings</h1>
+      <a class="back-x ui-btn ui-btn-right ui-corner-all ui-shadow ui-icon-delete ui-btn-icon-notext"></a>
     </div>
     <!-- main -->
     <div role="main" class="ui-content">
@@ -259,17 +260,18 @@
   <div data-role="page" id="about">
     <!-- panel -->
     <div data-role="panel" id="about-panel" data-display="overlay">
-      <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Close</a>
-      <ul data-role="listview" data-inset="true" data-icon="false">
+      <ul data-role="listview" data-inset="false" data-icon="false">
         <li><a href="#settings" data-transition="none">Settings</a></li>
         <li><a href="#about" class="ui-btn ui-btn-active" data-transition="none">About</a></li>
         <li><a href="#howitworks" data-transition="none">How It Works</a></li>
-      </ul>
+      </ul><br/>
+      <a class="close-button" href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Close</a>
     </div>
     <!-- header -->
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
       <a href="#about-panel" class="ui-btn ui-corner-all ui-shadow ui-icon-bars ui-btn-icon-left">Settings</a>
       <h1>About</h1>
+      <a class="back-x ui-btn ui-btn-right ui-corner-all ui-shadow ui-icon-delete ui-btn-icon-notext"></a>
     </div>
     <!-- main -->
     <div role="main" class="ui-content">
@@ -309,17 +311,18 @@
   <div data-role="page" id="howitworks">
     <!-- panel -->
     <div data-role="panel" id="howitworks-panel" data-display="overlay">
-      <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Close</a>
-      <ul data-role="listview" data-inset="true" data-icon="false">
+      <ul data-role="listview" data-inset="false" data-icon="false">
         <li><a href="#settings" data-transition="none">Settings</a></li>
         <li><a href="#about" data-transition="none">About</a></li>
         <li><a href="#howitworks" class="ui-btn ui-btn-active" data-transition="none">How It Works</a></li>
-      </ul>
+      </ul><br/>
+      <a class="close-button" href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Close</a>
     </div>
     <!-- header -->
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
       <a href="#howitworks-panel" class="ui-btn ui-corner-all ui-shadow ui-icon-bars ui-btn-icon-left">Settings</a>
       <h1>How It Works</h1>
+      <a class="back-x ui-btn ui-btn-right ui-corner-all ui-shadow ui-icon-delete ui-btn-icon-notext"></a>
     </div>
     <!-- main -->
     <div role="main" class="ui-content">
@@ -367,12 +370,12 @@
   <div data-role="page" id="locationselect" class="page-fullscreened">
     <!-- panel -->
     <div data-role="panel" id="map-panel" data-display="overlay">
-      <a href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Close</a>
-      <ul data-role="listview" data-inset="true" data-icon="false">
+      <ul data-role="listview" data-inset="false" data-icon="false">
         <li><a href="#settings" data-transition="none">Settings</a></li>
         <li><a href="#about" data-transition="none">About</a></li>
         <li><a href="#howitworks" data-transition="none">How It Works</a></li>
-      </ul>
+      </ul><br/>
+      <a class="close-button" href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Close</a>
     </div>
     <!-- header -->
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
