--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,8 @@
     <script src="lib/jquery.mobile-1.4.5.min.js"></script>
     <script src="lib/md5.js"></script>
     <script src="lib/fastclick.min.js"></script>
+    <script src="lib/lang.js"></script>
+    <script src="lib/handlebars-v4.0.11.js"></script>
     <script src="cordova.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.25&amp;key=AIzaSyD2nqIondaBl-YWGlaD_mo1L0w3j2yvehQ"></script>
     <!-- app-related scripts -->
@@ -35,103 +37,105 @@
     <script src="js/app.js"></script>
   </head>
   <body>
-
-
-  <div data-role="page" id="home">
-    <!-- modals -->
+    <script id="home-tpl" type="text/template">
+     <!-- modals -->
     <div id="modal-home-firsttime" data-role="popup" data-dismissible="false" data-overlay-theme="b" data-history="false">
       <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
       <div data-role="header" data-theme="a">
-        <h1 class="modal-title">Submitting Smell Reports</h1>
+        <h1 class="modal-title">{{firstModal.h1}}</h1>
       </div>
       <div role="main" class="ui-content">
         <ul>
-          <li>Rate the odor on a scale of 1-5</li>
-          <li>Describe the smell, source of odor and any symptoms (recommended)</li>
-          <li>Write a personal note to the health department (optional)</li>
-          <li>Endorse your reports - see Settings (recommended)</li>
+          <li>{{firstModal.li1}}</li>
+          <li>{{firstModal.li2}}</li>
+          <li>{{firstModal.li3}}</li>
+          <li>{{firstModal.li4}}</li>
         </ul>
-        <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline" data-rel="back">OK</a>
+        <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline" data-rel="back">{{firstModal.a}}</a>
       </div>
     </div>
     <div id="modal-predict-firsttime" data-role="popup" data-dismissible="false" data-overlay-theme="b" data-history="false">
-      <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
+      <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">{{perditionModal.a1}}</a>
       <div data-role="header" data-theme="a">
-        <h1 class="modal-title">Smell Event Predictions</h1>
+        <h1 class="modal-title">{{perditionModal.h1}}</h1>
       </div>
       <div role="main" class="ui-content">
-        <p>We are currently testing a smell prediction model that can alert Pittsburgh residents about a potential smell event in the area. The predictions' accuracy should improve as we receive more smell reports to verify our algorithm. We hope these notifications are useful to you!</p>
-        <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline" data-rel="back">OK</a>
+        <p>{{perditionModal.p}}</p>
+        <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline" data-rel="back">{{perditionModal.a2}}</a>
       </div>
     </div>
     <!-- panel -->
     <div data-role="panel" id="home-panel" data-display="overlay">
       <ul data-role="listview" data-inset="false" data-icon="false">
-        <li><a href="#settings" data-transition="none">Settings</a></li>
-        <li><a href="#about" data-transition="none">About</a></li>
-        <li><a href="#howitworks" data-transition="none">How It Works</a></li>
+        <li><a href="#settings" data-transition="none">{{panel.li1}}</a></li>
+        <li><a href="#about" data-transition="none">{{panel.li2}}</a></li>
+        <li><a href="#howitworks" data-transition="none">{{panel.li3}}</a></li>
       </ul><br/>
-	  <a class="close-button" href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Close</a>
+	  <a class="close-button" href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">{{panel.a}}</a>
     </div>
     <!-- header -->
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
-      <h1>Smell PGH</h1>
-      <a href="#home-panel" class="ui-btn ui-corner-all ui-shadow ui-icon-bars ui-btn-icon-left">Settings</a>
+      <h1>{{header.h1}}</h1>
+      <a href="#home-panel" class="ui-btn ui-corner-all ui-shadow ui-icon-bars ui-btn-icon-left">{{header.a}}</a>
     </div>
     <!-- main -->
     <div role="main" class="ui-content no-top" data-iscroll>
       <div class="homepage-section-top">
-        <h3>How does your air smell right now?</h3>
+        <h3>{{rating.h3}}</h3>
         <fieldset data-role="controlgroup">
-          <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-1" value="1" /><label for="radio-choice-1"><div class="picker-color-smell-1"></div> 1 Just fine!</label>
-          <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-2" value="2" /><label for="radio-choice-2"><div class="picker-color-smell-2"></div> 2 Barely noticeable</label>
-          <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-3" value="3" /><label for="radio-choice-3"><div class="picker-color-smell-3"></div> 3 Definitely noticeable</label>
-          <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-4" value="4" /><label for="radio-choice-4"><div class="picker-color-smell-4"></div> 4 It's getting pretty bad</label>
-          <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-5" value="5" /><label for="radio-choice-5"><div class="picker-color-smell-5"></div> 5 About as bad as it gets!</label>
+          <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-1" value="1" /><label for="radio-choice-1"><div class="picker-color-smell-1"></div>{{rating.input1}}</label>
+          <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-2" value="2" /><label for="radio-choice-2"><div class="picker-color-smell-2"></div>{{rating.input2}}</label>
+          <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-3" value="3" /><label for="radio-choice-3"><div class="picker-color-smell-3"></div>{{rating.input3}}</label>
+          <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-4" value="4" /><label for="radio-choice-4"><div class="picker-color-smell-4"></div>{{rating.input4}}</label>
+          <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-5" value="5" /><label for="radio-choice-5"><div class="picker-color-smell-5"></div>{{rating.input5}}</label>
         </fieldset>
       </div>
       <div class="homepage-section">
-        <label for="textfield_smell_description">Describe the smell or source of odor</label>
+        <label for="textfield_smell_description">{{describe.label}}</label>
         <input type="text" name="textfield_smell_description" id="textfield_smell_description" value="" placeholder="" data-clear-btn="true" />
       </div>
       <div class="homepage-section">
-        <label for="textfield_feelings_symptoms">Any symptoms linked to the odor?</label>
+        <label for="textfield_feelings_symptoms">{{symptoms.label}}</label>
         <input type="text" name="textfield_feelings_symptoms" id="textfield_feelings_symptoms" value="" placeholder="" data-clear-btn="true" />
       </div>
       <div class="homepage-section">
-        <label for="textfield_additional_comments">Add a personal note to the health department</label>
+        <label for="textfield_additional_comments">{{note.label}}</label>
         <textarea type="text" name="textfield_additional_comments" id="textfield_additional_comments" value="" data-clear-btn="true"></textarea>
       </div>
       <div id="current_time_location">
-        <label for="checkbox_current_time_location">Report Current Time/Location<label class="settings-description-smaller">Uncheck this box to manually select a time and location for the smell report.</label></label>
+        <label for="checkbox_current_time_location">{{custom.label1}}<label class="settings-description-smaller">{{custom.label2}}</label></label>
         <input type="checkbox" id="checkbox_current_time_location" checked="checked" />
         <div class="homepage-section" id="display_for_custom_time_location">
           <!-- custom location -->
-          <label for="button_smell_location">Report Location</label>
-          <button type="button" id="button_smell_location">Current Location (default)</button>
+          <label for="button_smell_location">{{custom.label3}}</label>
+          <button type="button" id="button_smell_location">{{custom.button}}</button>
           <!-- custom time -->
-          <label for="select-report-time">Report Time</label>
+          <label for="select-report-time">{{custom.label4}}</label>
           <select name="select-report-time" id="select-report-time">
             <option value=""></option>
-            <option value="">Now</option>
+            <option value="">{{custome.option}}</option>
           </select>
         </div>
       </div>
       <br/>
       <div class="submission-disclaimer">
-        NOTE: Please only enter information that you are comfortable with sharing anonymously on the public Smell PGH map.
+        {{disclaimer}}
       </div>
-      <button type="button" id="button_submit_report" disabled>Send Smell Report</button>
+      <button type="button" id="button_submit_report" disabled>{{button}}</button>
     </div>
     <!-- footer -->
     <div data-role="footer" data-position="fixed" data-id="home_1" data-tap-toggle="false">
       <div data-role="navbar">
         <ul>
-          <li><a href="#home" data-icon="home" class="ui-btn-active ui-state-persist" data-transition="none">Smell Report</a></li>
-          <li><a href="#map" data-icon="star" data-transition="none">Map</a></li>
+          <li><a href="#home" data-icon="home" class="ui-btn-active ui-state-persist" data-transition="none">{{footer.li1}}</a></li>
+          <li><a href="#map" data-icon="star" data-transition="none">{{footer.li2}}</a></li>
         </ul>
       </div>
     </div>
+    </script>
+
+
+  <div data-role="page" id="home">
   </div>
 
 
@@ -399,6 +403,5 @@
       </div>
     </div>
   </div>
-
   </body>
 </html>
