--- a/www/index.html
+++ b/www/index.html
@@ -37,6 +37,7 @@
     <script src="js/app.js"></script>
   </head>
   <body>
+    <!--home template-->
     <script id="home-tpl" type="text/template">
      <!-- modals -->
     <div id="modal-home-firsttime" data-role="popup" data-dismissible="false" data-overlay-theme="b" data-history="false">
@@ -90,17 +91,17 @@
           <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-5" value="5" /><label for="radio-choice-5"><div class="picker-color-smell-5"></div>{{rating.input5}}</label>
         </fieldset>
       </div>
-      <div class="homepage-section">
+      <div class="homepage-section">{{log describe.label}}
         <label for="textfield_smell_description">{{describe.label}}</label>
-        <input type="text" name="textfield_smell_description" id="textfield_smell_description" value="" placeholder="" data-clear-btn="true" />
+        <input type="text" name="textfield_smell_description" id="textfield_smell_description" value="" placeholder="" data-clear-btn="false" />
       </div>
       <div class="homepage-section">
         <label for="textfield_feelings_symptoms">{{symptoms.label}}</label>
-        <input type="text" name="textfield_feelings_symptoms" id="textfield_feelings_symptoms" value="" placeholder="" data-clear-btn="true" />
+        <input type="text" name="textfield_feelings_symptoms" id="textfield_feelings_symptoms" value="" placeholder="" data-clear-btn="false" />
       </div>
       <div class="homepage-section">
         <label for="textfield_additional_comments">{{note.label}}</label>
-        <textarea type="text" name="textfield_additional_comments" id="textfield_additional_comments" value="" data-clear-btn="true"></textarea>
+        <textarea type="text" name="textfield_additional_comments" id="textfield_additional_comments" value="" data-clear-btn="false"></textarea>
       </div>
       <div id="current_time_location">
         <label for="checkbox_current_time_location">{{custom.label1}}<label class="settings-description-smaller">{{custom.label2}}</label></label>
@@ -133,64 +134,56 @@
       </div>
     </div>
     </script>
-
-
-  <div data-role="page" id="home">
-  </div>
-
-
-  <div data-role="page" id="map" class="page-fullscreened">
+    <!--map template-->
+    <script id="map-tpl" type="text/template">
     <!-- modals -->
     <div id="modal-map-firsttime" data-role="popup" data-dismissible="false" data-overlay-theme="b" data-history="false">
-      <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
+      <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">{{modal.a1}}</a>
       <div data-role="header" data-theme="a">
-        <h1 class="modal-title">Using The Map</h1>
+        <h1 class="modal-title">{{modal.h1}}</h1>
       </div>
       <div role="main" class="ui-content">
         <ul>
-          <li>This map shows smell reports from all across Pittsburgh</li>
-          <li>We offset smell report locations to protect your privacy</li>
-          <li>Scroll through the timeline to view reports from any day</li>
-          <li>Dates highlighted with a darker color indicate avg. rating of smell reports</li>
-          <li>Click on a smell report or monitoring station to view more details</li>
+          <li>{{modal.li1}}</li>
+          <li>{{modal.li2}}</li>
+          <li>{{modal.li3}}</li>
+          <li>{{modal.li4}}</li>
+          <li>{{modal.li5}}</li>
         </ul>
-        <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline" data-rel="back">OK</a>
+        <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline" data-rel="back">{{modal.a2}}</a>
       </div>
     </div>
     <!-- panel -->
     <div data-role="panel" id="map-panel" data-display="overlay">
       <ul data-role="listview" data-inset="false" data-icon="false">
-        <li><a href="#settings" data-transition="none">Settings</a></li>
-        <li><a href="#about" data-transition="none">About</a></li>
-        <li><a href="#howitworks" data-transition="none">How It Works</a></li>
+        <li><a href="#settings" data-transition="none">{{panel.li1}}</a></li>
+        <li><a href="#about" data-transition="none">{{panel.li2}}</a></li>
+        <li><a href="#howitworks" data-transition="none">{{panel.li3}}</a></li>
       </ul><br/>
-      <a class="close-button" href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">Close</a>
+      <a class="close-button" href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">{{panel.a}}</a>
     </div>
     <!-- header -->
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
-      <h1>Smell PGH</h1>
-      <a href="#map-panel" class="ui-btn ui-corner-all ui-shadow ui-icon-bars ui-btn-icon-left">Settings</a>
+      <h1>{{header.h1}}</h1>
+      <a href="#map-panel" class="ui-btn ui-corner-all ui-shadow ui-icon-bars ui-btn-icon-left">{{header.a}}</a>
     </div>
     <!-- main -->
     <div role="main" class="ui-content" id="iframe-map-container" data-iscroll>
       <iframe id="iframe-map">
-        <p>Your browser does not support iframes.</p>
+        <p>{{p_iframe}}</p>
       </iframe>
     </div>
     <!-- footer -->
     <div data-role="footer" data-position="fixed" data-id="map_1" data-tap-toggle="false">
       <div data-role="navbar">
         <ul>
-          <li><a href="#home" data-icon="home" data-transition="none">Smell Report</a></li>
-          <li><a href="#map" data-icon="star" class="ui-btn-active ui-state-persist" data-transition="none">Map</a></li>
+          <li><a href="#home" data-icon="home" data-transition="none">{{footer.li1}}</a></li>
+          <li><a href="#map" data-icon="star" class="ui-btn-active ui-state-persist" data-transition="none">{{footer.li2}}</a></li>
         </ul>
       </div>
     </div>
-  </div>
-
-
-  <div data-role="page" id="settings">
-    <!-- panel -->
+  </script>
+  <script id="settings-tpl" type="text/template"><!-- panel -->
     <div data-role="panel" id="settings-panel" data-display="overlay">
       <ul data-role="listview" data-inset="false" data-icon="false">
         <li><a href="#settings" class="ui-btn ui-btn-active" data-transition="none">Settings</a></li>
@@ -235,6 +228,18 @@
         </ul>
       </div>
     </div>
+    </script>
+
+
+  <div data-role="page" id="home">
+  </div>
+
+
+  <div data-role="page" id="map" class="page-fullscreened">
+  </div>
+
+
+  <div data-role="page" id="settings">
   </div>
 
 
