Fixed top right x button which templating had broken

--- a/www/index.html
+++ b/www/index.html
@@ -361,6 +361,9 @@
       </div>
     </div>
   </script>
+  <!--locationselect page template-->
+  <script id="locationselect-tpl" type="text/template">
+  </script>
 
 
   <div data-role="page" id="home">
