Changed language file structure + comments

--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
     <script src="lib/jquery.mobile-1.4.5.min.js"></script>
     <script src="lib/md5.js"></script>
     <script src="lib/fastclick.min.js"></script>
-    <script src="lib/lang.js"></script>
+    <script src="langs/lang.js"></script>
     <script src="lib/handlebars-v4.0.11.js"></script>
     <script src="cordova.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.25&amp;key=AIzaSyD2nqIondaBl-YWGlaD_mo1L0w3j2yvehQ"></script>
