Added extra braces to stop html escaping where needed

--- a/www/index.html
+++ b/www/index.html
@@ -144,7 +144,7 @@
       </div>
       <div role="main" class="ui-content">
         <ul>
-          <li>{{modal.li1}}</li>
+          <li>{{{modal.li1}}}</li>
           <li>{{modal.li2}}</li>
           <li>{{modal.li3}}</li>
           <li>{{modal.li4}}</li>
