I was wrong about the need for {{{

--- a/www/index.html
+++ b/www/index.html
@@ -82,7 +82,7 @@
     <!-- main -->
     <div role="main" class="ui-content no-top" data-iscroll>
       <div class="homepage-section-top">
-        <h3>{{{rating.h3}}}</h3>
+        <h3>{{rating.h3}}</h3>
         <fieldset data-role="controlgroup">
           <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-1" value="1" /><label for="radio-choice-1"><div class="picker-color-smell-1"></div>{{rating.input1}}</label>
           <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-2" value="2" /><label for="radio-choice-2"><div class="picker-color-smell-2"></div>{{rating.input2}}</label>
@@ -144,7 +144,7 @@
       </div>
       <div role="main" class="ui-content">
         <ul>
-          <li>{{{modal.li1}}}</li>
+          <li>{{modal.li1}}</li>
           <li>{{modal.li2}}</li>
           <li>{{modal.li3}}</li>
           <li>{{modal.li4}}</li>
