Removed console logs

--- a/www/index.html
+++ b/www/index.html
@@ -91,7 +91,7 @@
           <input class="radio-smell" type="radio" name="radio-choice" id="radio-choice-5" value="5" /><label for="radio-choice-5"><div class="picker-color-smell-5"></div>{{rating.input5}}</label>
         </fieldset>
       </div>
-      <div class="homepage-section">{{log describe.label}}
+      <div class="homepage-section">
         <label for="textfield_smell_description">{{describe.label}}</label>
         <input type="text" name="textfield_smell_description" id="textfield_smell_description" value="" placeholder="" data-clear-btn="false" />
       </div>
@@ -203,7 +203,6 @@
     <!-- main -->
     <div role="main" class="ui-content">
       <div id="reportsCollapsible" data-role="collapsible">
-        {{log contact}}
         <h3>{{contact.h3}}</h3>
         <label class="settings-description">{{contact.label}}</label>
         <div>
