Added back text box x's
Otherwise is very broken

--- a/www/index.html
+++ b/www/index.html
@@ -93,15 +93,15 @@
       </div>
       <div class="homepage-section">
         <label for="textfield_smell_description">{{describe.label}}</label>
-        <input type="text" name="textfield_smell_description" id="textfield_smell_description" value="" placeholder="" data-clear-btn="false" />
+        <input type="text" name="textfield_smell_description" id="textfield_smell_description" value="" placeholder="" data-clear-btn="true" />
       </div>
       <div class="homepage-section">
         <label for="textfield_feelings_symptoms">{{symptoms.label}}</label>
-        <input type="text" name="textfield_feelings_symptoms" id="textfield_feelings_symptoms" value="" placeholder="" data-clear-btn="false" />
+        <input type="text" name="textfield_feelings_symptoms" id="textfield_feelings_symptoms" value="" placeholder="" data-clear-btn="true" />
       </div>
       <div class="homepage-section">
         <label for="textfield_additional_comments">{{note.label}}</label>
-        <textarea type="text" name="textfield_additional_comments" id="textfield_additional_comments" value="" data-clear-btn="false"></textarea>
+        <textarea type="text" name="textfield_additional_comments" id="textfield_additional_comments" value="" data-clear-btn="true"></textarea>
       </div>
       <div id="current_time_location">
         <label for="checkbox_current_time_location">{{custom.label1}}<label class="settings-description-smaller">{{custom.label2}}</label></label>
